--- a/app/assets/stylesheets/writer.css.scss
+++ b/app/assets/stylesheets/writer.css.scss
@@ -561,7 +561,7 @@ a {
   margin: 0 auto;
 }
 
-.border {
+.border, .header-writer-mobile {
   nav {
     .nav-title {
       flex-grow: 2;
